@@ -26,6 +26,9 @@ Cookies in HTTP responses from the client side are now retrievable on the HttpRe
 
 Micronaut 2.1 introduces the concept of a default environment. One or more default environments can be set and they will apply if no other environments are explicitly specified. See the <<environments, environments documentation>> for information on how to use this new feature.
 
+==== Liveness/Readiness Health Endpoint Resources
+
+A new health endpoint resources `/health/liveness` and `/health/readiness` to distinguish health indicators purpose.
 
 === Module Upgrades
 
